gts-macros/tests/compile_fail/gts_error_missing_title.stderr
error: gts_error: Missing required attribute: 'title'
 --> tests/compile_fail/gts_error_missing_title.rs:3:1
  |
3 | / #[gts_error(
4 | |     r#type = "cf.system.logical.not_found.v1",
5 | |     status = 404,
6 | | )]
  | |__^
  |
  = note: this error originates in the attribute macro `gts_error` (in Nightly builds, run with -Z macro-backtrace for more info)
